--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Lyndon Test!</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js"></script>
     <script>
       $(function() {
         $('#content').append('<div id="hi">Hello world!</div>')
